--- a/spring-boot-server-v.2/src/main/resources/application.properties
+++ b/spring-boot-server-v.2/src/main/resources/application.properties
@@ -8,3 +8,17 @@ spring.data.mongodb.database=carShop
 # App Properties
 jwtSecret= SecretKey
 jwtExpirationMs= 86400000
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+
+## File Storage Properties
+# Please change this to the path where you want the uploaded files to be stored.
+file.uploadDir=./src/main/resources/images/
