--- a/spring-boot-server-v.2/src/main/resources/application.properties
+++ b/spring-boot-server-v.2/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.hibernate.ddl-auto= update
-spring.data.mongodb.database=carShop
+spring.data.mongodb.database=car-shop
 # App Properties
 jwtSecret= SecretKey
 jwtExpirationMs= 86400000
