--- a/cars-frontend-v.2/package.json
+++ b/cars-frontend-v.2/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
+    "@angular/http": "^7.2.16",
     "@angular/localize": "^10.0.2",
     "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.0",
@@ -23,6 +24,7 @@
     "@angular/router": "~10.0.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.1",
+    "file-saver": "^2.0.5",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
